# pyGedcomX

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
gedcom_x/: basetypes.py  date.py  enums.py
gedcomx/: __init__.py  components.py  converters.py  date.py  enums.py  fileformat.py  models.py  parsers.py  reader.py  record.py  utils.py
tests/: fixtures.py  test_date.py  test_date_validation.py  test_gedcom_x.py  test_parsers.py
tests/files/: person.json  record.xml
