[tool.poetry]
name = "pyGedcomX"
version = "0.0.2"
description = "GEDCOM X toolbox for Python"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "Apache-2.0"
packages = [
    { include = "gedcomx" },
]
readme = "README.rst"
repository = "https://github.com/dekoza/pyGedcomX"
keywords = ["genealogy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Sociology :: Genealogy",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
importlib-metadata = {version = "^1.0", python = "<3.8"}
pendulum = "^2.1.2"
pydantic = "^1.8.2"
language-tags = "^1.1.0"
lark-parser = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.8b0"
ipython = "^7.27.0"
ipdb = "^0.13.9"
sphinx = "^3.2.1"
rstcheck = "^3.3.1"

[tool.isort]
profile = "black"
src_paths = ["gedcomx", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
